[gd_scene load_steps=18 format=2]

[ext_resource path="res://rink.gd" type="Script" id=1]
[ext_resource path="res://art/rink.png" type="Texture" id=2]
[ext_resource path="res://net.tscn" type="PackedScene" id=3]
[ext_resource path="res://stick.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/life_background.png" type="Texture" id=5]
[ext_resource path="res://art/life_progress.png" type="Texture" id=6]
[ext_resource path="res://fonts/Rationale-Regular.otf" type="DynamicFontData" id=7]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 256, 0 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 0, 192 )

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( 256, 0 )
b = Vector2( 256, 192 )

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 1, 192 )
b = Vector2( 256, 192 )

[sub_resource type="Curve2D" id=5]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 30, 64, 0, 0, 0, 0, 226, 64 )
}

[sub_resource type="Curve2D" id=6]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 62, 183, 0, 0, 0, 0, 196, 184 )
}

[sub_resource type="Curve2D" id=7]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -25, -22, 0, 0, 0, 0, 42, 55 )
}

[sub_resource type="DynamicFont" id=8]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=9]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="Animation" id=10]

length = 0.75
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("gameover_path/gameover_follow:unit_offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gameover_path/gameover_follow/Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("gameover_path/gameover_follow/Node2D/VBoxContainer/key_to_continue:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="rink" type="Node" index="0"]

script = ExtResource( 1 )
puck_speed = 120
puck_spawn_max_time = 4
puck_spawn_min_time = 0.5
puck_spawn_time_speed_step = 0.05
max_health = 10

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="puck_spawn_timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="puck_spawn_speed_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="background" type="Sprite" parent="." index="3"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="walls" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="north_wall" type="CollisionShape2D" parent="walls" index="0"]

shape = SubResource( 1 )

[node name="west_wall" type="CollisionShape2D" parent="walls" index="1"]

shape = SubResource( 2 )

[node name="east_wall" type="CollisionShape2D" parent="walls" index="2"]

shape = SubResource( 3 )

[node name="net" parent="." index="5" instance=ExtResource( 3 )]

position = Vector2( 127, 21 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="pass" type="Area2D" parent="." index="6"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pass" index="0"]

shape = SubResource( 4 )

[node name="puck_start_path" type="Path2D" parent="." index="7"]

editor/display_folded = true
curve = SubResource( 5 )

[node name="puck_start" type="PathFollow2D" parent="puck_start_path" index="0"]

position = Vector2( 30, 64 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = false
lookahead = 4.0

[node name="puck_end_path" type="Path2D" parent="." index="8"]

editor/display_folded = true
curve = SubResource( 6 )

[node name="puck_end" type="PathFollow2D" parent="puck_end_path" index="0"]

position = Vector2( 62, 183 )
rotation = 0.00745748
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = false
lookahead = 4.0

[node name="stick" parent="." index="9" instance=ExtResource( 4 )]

position = Vector2( 128, 180 )

[node name="gui" type="CanvasLayer" parent="." index="10"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="health" type="TextureProgress" parent="gui" index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -10.0
margin_right = 90.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 5 )
texture_over = null
texture_progress = ExtResource( 6 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures" ]

[node name="gameover_path" type="Path2D" parent="gui" index="1"]

curve = SubResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="gameover_follow" type="PathFollow2D" parent="gui/gameover_path" index="0"]

position = Vector2( 42, 55 )
offset = 102.125
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = false
lookahead = 4.0
_sections_unfolded = [ "Transform" ]

[node name="Node2D" type="Node2D" parent="gui/gameover_path/gameover_follow" index="0"]

_sections_unfolded = [ "Transform" ]

[node name="VBoxContainer" type="VBoxContainer" parent="gui/gameover_path/gameover_follow/Node2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 184.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="game over" type="Label" parent="gui/gameover_path/gameover_follow/Node2D/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 184.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0.333333, 1 )
custom_colors/font_color_shadow = Color( 0.666667, 0, 0.333333, 1 )
text = "Game Over"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="key_to_continue" type="Label" parent="gui/gameover_path/gameover_follow/Node2D/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = 184.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 1, 1, 1 )
text = "Press any key to continue"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="gui" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/game over" = SubResource( 10 )
blend_times = [  ]

[connection signal="timeout" from="puck_spawn_timer" to="." method="_on_puck_spawn_timer_timeout"]

[connection signal="timeout" from="puck_spawn_speed_timer" to="." method="_on_puck_spawn_speed_timer_timeout"]

[connection signal="body_entered" from="net" to="." method="_on_net_body_entered"]

[connection signal="body_entered" from="pass" to="." method="_on_pass_body_entered"]


